Tests/DependencyInjection/Fixtures/annotations/inject/invalid/FooClassInvalidSetterInjection3.php
<?php
/** @Service */
class FooClassInvalidSetterInjection3
{
    /** @Inject({"foo"}) */
    public function setDependencies($fooService, $barService)
    {
    }
}
